--- a/VSG.Assembler/VSG.Assembler.csproj
+++ b/VSG.Assembler/VSG.Assembler.csproj
@@ -45,9 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblerRepository.cs" />
+    <Compile Include="Compiler\VegasCompiler.cs" />
     <Compile Include="EffectRepository.cs" />
-    <Compile Include="FacilitiesRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rederer.cs" />
     <Compile Include="VegasHandler.cs" />
   </ItemGroup>
   <ItemGroup>
