--- a/VSG.ViewModel/VSG.ViewModel.csproj
+++ b/VSG.ViewModel/VSG.ViewModel.csproj
@@ -30,41 +30,39 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="ScriptPortal.Vegas, Version=15.0.0.216, Culture=neutral, PublicKeyToken=3cda94b1926e6fbc, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionHandlers\ActionStepHandler.cs" />
+    <Compile Include="ActionHandlers\AddTrackActionStepHandler.cs" />
     <Compile Include="EffectModel.cs" />
-    <Compile Include="ElementSelectors\ElementSelector.cs" />
-    <Compile Include="ElementSelectors\Event\EventByLengthSelection.cs" />
-    <Compile Include="ElementSelectors\Event\EventByNameSelector.cs" />
-    <Compile Include="ElementSelectors\Event\EventByStateSeletion.cs" />
-    <Compile Include="ElementSelectors\Event\EventSelector.cs" />
-    <Compile Include="ElementSelectors\Track\TrackByStateSelector.cs" />
-    <Compile Include="ElementSelectors\Track\TrackByNameSelector.cs" />
-    <Compile Include="ElementSelectors\Track\TrackSelector.cs" />
     <Compile Include="EffectTreeViewModel.cs" />
+    <Compile Include="ElementSelector.cs" />
     <Compile Include="Enums\ElementMediaType.cs" />
+    <Compile Include="Enums\ElementType.cs" />
+    <Compile Include="Enums\EventAction.cs" />
     <Compile Include="Enums\MoveType.cs" />
+    <Compile Include="Enums\SelectorType.cs" />
+    <Compile Include="Enums\TrackAction.cs" />
+    <Compile Include="OptionsGetter\OptionGetterModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptSteps\AddStep.cs" />
     <Compile Include="ScriptSteps\ElementStep.cs" />
-    <Compile Include="ScriptSteps\Event\AddEventStep.cs" />
-    <Compile Include="ScriptSteps\Event\EventStep.cs" />
-    <Compile Include="ScriptSteps\Event\MoveEventStep.cs" />
-    <Compile Include="ScriptSteps\Event\RemoveEventStep.cs" />
-    <Compile Include="ScriptSteps\Event\SetEffectEventStep.cs" />
-    <Compile Include="ScriptSteps\ScriptStep.cs" />
-    <Compile Include="ScriptSteps\Track\AddTrackStep.cs" />
-    <Compile Include="ScriptSteps\Track\RemoveTrackStep.cs" />
-    <Compile Include="ScriptSteps\Track\SetEffectTrackStep.cs" />
-    <Compile Include="ScriptSteps\Track\TrackStep.cs" />
+    <Compile Include="ScriptSteps\MoveStep.cs" />
+    <Compile Include="ScriptSteps\RemoveStep.cs" />
+    <Compile Include="ScriptSteps\SetEffectStep.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
