--- a/VSG.Core/VSG.Core.csproj
+++ b/VSG.Core/VSG.Core.csproj
@@ -42,59 +42,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ScriptPortal.Capture">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.Capture.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.Archive">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.Archive.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.clrshared">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.clrshared.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.DeviceExp">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.DeviceExp.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.ExternalVideoDevice">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.ExternalVideoDevice.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.FileExplorer">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.FileExplorer.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.SfBdMuxCom">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.SfBdMuxCom.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.Skins">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.Skins.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.TextGen.CoreGraphics">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.TextGen.CoreGraphics.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.TextGen.CoreGraphics.XmlSerializers">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.TextGen.CoreGraphics.XmlSerializers.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.TextGen.OFXInterop">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.TextGen.OFXInterop.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.VideoEffectsUI">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.VideoEffectsUI.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.MediaSoftware.XDCAMExp">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.MediaSoftware.XDCAMExp.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.Monitor3D">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.Monitor3D.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.Vegas">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.Vegas.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.Vegas.MobileSync">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.Vegas.MobileSync.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.Vegas.PublishOFA">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.Vegas.PublishOFA.dll</HintPath>
-    </Reference>
-    <Reference Include="ScriptPortal.Vegas.RelinkSonyWirelessAdapterMedia">
-      <HintPath>..\..\..\..\..\Program Files\VEGAS\VEGAS Pro 15.0\ScriptPortal.Vegas.RelinkSonyWirelessAdapterMedia.dll</HintPath>
+    <Reference Include="ScriptPortal.Vegas, Version=15.0.0.216, Culture=neutral, PublicKeyToken=3cda94b1926e6fbc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\burak\AppData\Local\Packages\Microsoft.SkypeApp_kzf8qxf38zg5c\LocalState\Downloads\ScriptPortal.Vegas.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -107,10 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Effects\Getters\EffectsGetter.cs" />
-    <Compile Include="Effects\Services\VideoEffectService.cs" />
+    <Compile Include="Getters\EffectsGetter.cs" />
+    <Compile Include="Services\RemoveElementService.cs" />
+    <Compile Include="Services\AddElementService.cs" />
+    <Compile Include="Services\SelectorService.cs" />
+    <Compile Include="Services\VideoEffectService.cs" />
     <Compile Include="EntryPoint.cs" />
-    <Compile Include="Effects\Services\IEffectService.cs" />
     <Compile Include="Extensions\TrackEventExtension.cs" />
     <Compile Include="MainContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -119,13 +71,13 @@
     <Compile Include="Extensions\TimelineExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VSG.Model\VSG.Model.csproj">
-      <Project>{f564bf30-083d-47d8-aba8-5eb7353e73e9}</Project>
-      <Name>VSG.Model</Name>
-    </ProjectReference>
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <ProjectReference Include="..\VSG.ViewModel\VSG.ViewModel.csproj">
+      <Project>{52fcbcbf-5d3a-4e36-ae45-bbae56092293}</Project>
+      <Name>VSG.ViewModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
