--- a/VSG.Translator/VSG.Translator.csproj
+++ b/VSG.Translator/VSG.Translator.csproj
@@ -30,9 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,7 +44,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EffectService.cs" />
-    <Compile Include="HandlerResolvers\HandlerResolver.cs" />
     <Compile Include="OptionGetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenderStarter.cs" />
@@ -57,5 +58,6 @@
       <Name>VSG.ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
