--- a/VSG.Bootstrapper/VSG.Bootstrapper.csproj
+++ b/VSG.Bootstrapper/VSG.Bootstrapper.csproj
@@ -35,6 +35,12 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>bootstrapper.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationFramework" />
     <Reference Include="ScriptPortal.Vegas, Version=15.0.0.216, Culture=neutral, PublicKeyToken=3cda94b1926e6fbc, processorArchitecture=MSIL">
@@ -59,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bootstrapper.pfx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VSG.App\VSG.App.csproj">
