--- a/VSG.Core/VSG.Core.csproj
+++ b/VSG.Core/VSG.Core.csproj
@@ -31,11 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>core.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
@@ -58,20 +57,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Getters\EffectsGetter.cs" />
+    <Compile Include="Services\MoveElementService.cs" />
     <Compile Include="Services\RemoveElementService.cs" />
     <Compile Include="Services\AddElementService.cs" />
     <Compile Include="Services\SelectorService.cs" />
+    <Compile Include="Services\SetEffectElementService.cs" />
     <Compile Include="Services\VideoEffectService.cs" />
     <Compile Include="EntryPoint.cs" />
     <Compile Include="Extensions\TrackEventExtension.cs" />
     <Compile Include="MainContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Selectors\EventSelector.cs" />
-    <Compile Include="Selectors\TrackSelector.cs" />
     <Compile Include="Extensions\TimelineExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="core.pfx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VSG.ViewModel\VSG.ViewModel.csproj">
